<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingsScreen"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_settings_screen">

    <TextView
        android:id="@+id/SettingsScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/Title_Underline5"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsScreenTitle" />


    <Button
        android:id="@+id/add_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/custom_button"
        android:text="@string/plus"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_Underline5" />

    <TextView
        android:id="@+id/add_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:text="@string/add_a_divice"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/add_button"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_Underline5" />

    <TextView
        android:id="@+id/PaswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="120dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_device" />

    <Button
        android:id="@+id/Logout_Button"
        android:layout_width="160dp"
        android:layout_height="37dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PaswordText" />


</androidx.constraintlayout.widget.ConstraintLayout>