<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeScreen"
    tools:showIn="@layout/activity_home_screen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="383dp"
        android:layout_height="51dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:text="Home Monitor System"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />


    <Button
        android:id="@+id/SmokeButton"
        android:layout_width="359dp"
        android:layout_height="101dp"
        android:layout_marginTop="36dp"
        android:background="#F78D96"
        android:text="@string/smoke"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TemperatureButton" />

    <Button
        android:id="@+id/TemperatureButton"
        android:layout_width="359dp"
        android:layout_height="101dp"
        android:layout_marginTop="72dp"
        android:background="#94D8C6"
        android:text="@string/temperatureValue"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/MotionButton"
        android:layout_width="359dp"
        android:layout_height="101dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/motion"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SmokeButton"
        app:layout_constraintVertical_bias="0.052" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="166dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>