<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TemperatureScreen"
    tools:showIn="@layout/activity_temperature_screen">

    <TextView
        android:id="@+id/TempScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/temperatureScreenTitle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/Title_Underline5"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TempScreenTitle" />

    <TextView
        android:id="@+id/TempStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="156dp"
        android:text="@string/temperatureValue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_Underline5" />

    <ListView
        android:id="@+id/actual_gas"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="52dp"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toEndOf="@+id/TempStat"
        app:layout_constraintTop_toBottomOf="@+id/Title_Underline5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="171dp"
        android:layout_height="56dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="292dp"
        android:text="@string/humidityValue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TempStat" />

    <ListView
        android:id="@+id/actual_hum"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="52dp"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/actual_gas" />

</androidx.constraintlayout.widget.ConstraintLayout>